# nothinghide

./: .gitignore  .replit  =0.0.9  ARCHITECTURE.md  COOKIE_COOKED_SPECS.md  CookieCookedUI.jsx  cookie-cooked-core.js  cookie_cooked.py  cookie_cooked_api.py  dashboard.jsx  extension-logic.js  extension_logic.js  main.py  main_cooked.py  pyproject.toml  replit.md
attached_assets/: Pasted-2026-01-21T14-46-10-804459629Z-httpcore-1-0-9-2026-01-2_1769007664126.txt  Pasted-2026-01-21T15-18-37-382975294Z-await-self-serve-sockets_1769009453646.txt  Pasted-2026-01-21T15-51-40-358788526Z-Downloading-cache-2026-0_1769012293699.txt  Pasted-2026-01-21T16-21-10-257719849Z-Downloading-cache-2026-0_1769012647905.txt  Pasted-Alright-I-m-going-to-be-ruthless-and-precise-This-is-an_1765815057341.txt  Pasted-Here-is-the-refined-cleaned-zero-junk-Replit-Agent-prom_1769013712118.txt  Pasted-Integrate-an-agentic-lightweight-explainable-deepfake-r_1768993489755.txt
nothinghide/: .env.example  README.md  SYNOPSIS.md  bulk.py  config.py  email_checker.py  pyproject.toml  start.sh  username_checker.py
nothinghide/agent/: __init__.py  correlation.py  domain.py  rate_limiter.py
nothinghide/app/: __init__.py  branding.py  config.py  email_check.py  main.py  password_check.py  scan.py  startup.py
nothinghide/assets/: fastfetch.jsonc  logo.txt
nothinghide/src/nothinghide/: __init__.py  branding.py  cli.py  config.py  core.py  domain.py  email_checker.py  exceptions.py  export.py  osint_analyzer.py  password_checker.py  platform.py  settings.py  username_checker.py  utils.py
nothinghide/src/nothinghide/agent/: correlation.py  orchestrator.py  sources.py
nothinghide/src/nothinghide/nothide/: engine.py  modules.py  orchestrator.py
nothinghide/src/nothinghide/web/: app.py  cookie_cooked.py
nothinghide/src/nothinghide/web/templates/: base.html  email.html  fullscan.html  fullscan_result.html  nothide.html  username_result.html
nothinghide/standalone/: install.sh
nothinghide/web/: ai_agents.py  app.py  cookie_cooked.py  cookie_cooked_api.py
nothinghide/web/security/: ai_risk.py  engine.py  ncaptcha.py
nothinghide/web/static/: background.js  content.js  manifest.json  ncaptcha.js  popup.html  security.js  style.css
nothinghide/web/templates/: ai_analysis.html  ai_analysis_result.html  base.html  cooked.html  email.html  email_result.html  fullscan.html  fullscan_result.html  help.html  index.html  ncaptcha_tool.html  osint_map.html  osint_map_result.html  password.html  password_result.html  terminal.html  username.html  username_result.html
